<resources>
    <string name="app_name">Mirror_2.0</string>
    <string name="ID_create">创建账号</string>
    <string name="phone_number">手机号</string>
    <string name="verification_code">验证码</string>
    <string name="set_password">设置密码</string>
    <string name="id_login">账号登录</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="use_other_id">使用社交账号</string>
    <string name="send_verification">发送验证码</string>

</resources>
