<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
android:background="@color/light_grey"
    android:orientation="vertical">

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30px"
        android:layout_marginTop="30px"
        android:background="@color/light_grey">

        <TextView
            android:id="@+id/creat_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ID_create"
            android:textColor="@android:color/black"
            android:textSize="34px" />

        <ImageView
            android:id="@+id/line_create_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/creat_id"
            android:layout_marginRight="30px"
            android:layout_marginTop="20px"
            android:background="@mipmap/linecreateuser" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/line_create_user"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="16px"
            android:layout_marginRight="46px"
            android:src="@mipmap/close" />

    </com.zhy.autolayout.AutoRelativeLayout>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"
        android:layout_marginTop="40px"
        android:orientation="vertical"
        android:background="@color/light_grey">

        <TextView
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textSize="24px" />
        <EditText
            android:id="@+id/activity_register_phoneNumber"
            android:layout_marginTop="20px"
            android:layout_width="match_parent"
            android:layout_height="60px"
            android:background="@color/colorWhite"

            />
        <TextView
            android:textColor="@android:color/black"
            android:layout_marginTop="30px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verification_code"
            android:textSize="24px" />
        <EditText
            android:id="@+id/activity_register_verification_code"
            android:layout_width="match_parent"
            android:layout_height="60px"
            android:background="@color/colorWhite"
            android:layout_marginTop="20px"
            />
        <TextView
            android:textColor="@android:color/black"
            android:layout_marginTop="30px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_password"
            android:textSize="24px" />
        <EditText
            android:id="@+id/activity_register_set_password"
            android:layout_width="match_parent"
            android:layout_height="60px"
            android:layout_marginTop="20px"
            android:background="@color/colorWhite"
            />
        <Button
            android:layout_marginTop="50px"
            android:textColor="@android:color/white"
            android:textSize="34px"
            android:text="@string/ID_create"
            android:layout_width="match_parent"
            android:layout_height="80px"
            android:background="@mipmap/createuserbuttton"
            android:id="@+id/register_create_id"/>


    </com.zhy.autolayout.AutoLinearLayout>
</com.zhy.autolayout.AutoLinearLayout>