<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30px"
        android:layout_marginTop="30px"
        android:background="@color/light_grey">

        <TextView
            android:id="@+id/id_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@android:color/black"
            android:textSize="34px" />

        <ImageView
            android:id="@+id/line_login_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_login"
            android:layout_marginRight="30px"
            android:layout_marginTop="20px"
            android:background="@mipmap/linecreateuser" />

        <ImageView
            android:id="@+id/login_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/line_login_user"
            android:layout_alignParentRight="true"
            android:layout_marginRight="46px"
            android:src="@mipmap/close" />

    </com.zhy.autolayout.AutoRelativeLayout>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"
        android:layout_marginTop="40px"
        android:orientation="vertical"
        android:background="@color/light_grey">

        <TextView
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textSize="24px" />
        <EditText
            android:maxLength="11"
            android:numeric="integer"
            android:id="@+id/activity_login_phoneNumber"
            android:layout_marginTop="20px"
            android:layout_width="match_parent"
            android:layout_height="80px"
            android:background="@color/colorWhite"
            />
        <TextView
            android:textColor="@android:color/black"
            android:layout_marginTop="30px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="24px" />
        <EditText
            android:password="true"
            android:maxLength="16"
            android:id="@+id/activity_login_password"
            android:layout_width="match_parent"
            android:layout_height="80px"
            android:layout_marginTop="20px"
            android:background="@color/colorWhite"
            />
        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="显示密码"
            android:textSize="24px"/>
        <Button
            android:layout_marginTop="50px"
            android:textColor="@android:color/white"
            android:textSize="34px"
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="80px"
            android:background="@mipmap/unusedbutton"
            android:id="@+id/login"/>
        <Button
            android:layout_marginTop="50px"
            android:textColor="@android:color/white"
            android:textSize="34px"
            android:text="@string/ID_create"
            android:layout_width="match_parent"
            android:layout_height="80px"
            android:background="@mipmap/createuserbuttton"
            android:id="@+id/login_register_id"/>


    </com.zhy.autolayout.AutoLinearLayout>
    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="100px"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50px">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <ImageView
                android:id="@+id/weiBo_login"
                android:src="@mipmap/weiboicon"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                />
            <ImageView
                android:id="@+id/weixin_login"
                android:src="@mipmap/weixinicon"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

        </com.zhy.autolayout.AutoLinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30px"
            android:text="@string/use_other_id"
            android:layout_above="@id/weiBo_login"
            android:layout_marginBottom="50px"
            android:layout_centerInParent="true"
            />

    </com.zhy.autolayout.AutoRelativeLayout>
</LinearLayout>